@@ -20,6 +20,9 @@ package org.apache.tinkerpop.gremlin.process.traversal;
 
 import org.apache.tinkerpop.gremlin.process.traversal.step.GValue;
 
+import java.util.Collection;
+import java.util.Map;
+
 /**
  * Predefined {@code Predicate} values that can be used as {@code String} filters.
  *
@@ -33,6 +36,10 @@ public class TextP extends P<String> {
 
     public TextP(final PBiPredicate<String, String> biPredicate, final GValue<String> value) {
         super(biPredicate, value);
+    }
+
+    protected TextP(final PBiPredicate<String, String> biPredicate, final Collection<String> literals, final Map<String, String> variables) {
+        super(biPredicate, literals, variables, false);
     }
 
     @Override
